--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -6,28 +6,50 @@
     "Lucida Sans", Arial, sans-serif;
 }
 
-.title {
+.page {
+  width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-}
+  flex-direction: column;
+  background-color: lightgray;
 
-.slogan {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
+  &__slogan {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 30px 0 30px 0;
+    font-size: 30px;
+  }
+
+  &__wrapper {
+    padding: 40px;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    &--title {
+      font-size: 30px;
+      margin-left: 30px;
+    }
+
+    &--logo {
+      width: 150px;
+    }
+  }
 }
 
 .cards {
-  background-color: red;
+  max-width: 1200px;
+  margin: auto;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
   list-style: none;
   margin-top: 1.875rem;
+  margin-bottom: 1.8rem;
+  background-color: lightgray;
 }
 
 .pokemon {
@@ -36,15 +58,35 @@
   justify-content: space-around;
   margin: 2rem 0.5rem 0.5rem 0;
   border-radius: 0.5rem;
-  background-color: white;
+  background-color: #f2f2f2;
   border: 0.1875rem solid black;
-  width: 200px;
-  height: 250px;
+  width: 250px;
+  height: 350px;
+  box-shadow: 9px 9px 18px -5px rgba(0, 0, 0, 1);
+
   &__img {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px 0 40px 0;
+    background-color: #3269b0;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    margin-top: 20px;
+
+    &--card {
+      border: 2px solid black;
+      height: 150px;
+      width: 150px;
+      background-color: white;
+    }
+  }
+
+  &__name {
+    &--card {
+      margin-top: 30px;
+    }
   }
 }
 
@@ -58,10 +100,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: gray;
+    margin-bottom: 15px;
+    background-color: #ffcc01;
     width: 60px;
     height: 30px;
-    border-radius: 10px;
-    border: 2px solid black;
+    border-radius: 5px;
+    padding: 10px 35px 10px 35px;
+    border: 1px solid black;
   }
 }
